Added an approval model that requires 2 approvers to recover a password

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -10,7 +10,7 @@
   "common.success": "Success",
   "common.yes": "Yes",
   "common.no": "No",
-  "common.back": "← Back",
+  "common.back": "Back",
   "common.created": "Created",
   "common.clear": "Clear",
   "common.unknown": "Unknown",
@@ -566,6 +566,26 @@
   "projectSettings.handleSavePoolWarning.success": "Pool warning settings updated",
   "projectSettings.handleSavePoolWarning.fail": "Failed to update pool warning settings",
 
+  "approvals.title": "Approvals",
+  "approvals.my_pending": "My Pending Approvals",
+  "approvals.no_pending_approvals": "You have no pending approvals.",
+  "approvals.can_vote_on": "Approvals You Can Vote On",
+  "approvals.no_actionable_approvals": "There are no approvals that need your vote.",
+  "approvals.approve": "Approve",
+  "approvals.reject": "Reject",
+  "approvals.event.password_change": "Password Change",
+  "approvals.event.password_reset": "Password Reset",
+  "approvals.voting_progress": "Voting Progress",
+  "approvals.solo_project": "You are the only admin in this project, so your vote decides the outcome.",
+  "approvals.votes": "Votes",
+  "approvals.no_votes_yet": "No votes yet",
+  "approvals.cast_vote": "Cast Your Vote",
+  "approvals.reason": "Reason",
+  "approvals.reason_optional": "Reason (optional)",
+  "approvals.reason_placeholder": "Why are you voting this way?",
+
+  "common.view_details": "View Details",
+
   "weekdays.sun": "Sun",
   "weekdays.mon": "Mon",
   "weekdays.tue": "Tue",
@@ -626,5 +646,43 @@
   "help.passwordRecovery.important.point3": "If you have no trusted users, only a system administrator can help you recover your account",
 
   "help.passwordRecovery.contactAdmin.title": "Need Help?",
-  "help.passwordRecovery.contactAdmin.description": "If you don't have trusted users set up or they're unavailable, contact the person who manages your BonsCompte server for assistance."
+  "help.passwordRecovery.contactAdmin.description": "If you don't have trusted users set up or they're unavailable, contact the person who manages your BonsCompte server for assistance.",
+
+  "recovery.title": "Password Recovery",
+  "recovery.description": "Enter your username to initiate a password recovery request. Your trusted users will need to approve the request.",
+  "recovery.usernamePlaceholder": "Enter your username",
+  "recovery.initiateButton": "Request Recovery",
+  "recovery.requestCreated": "Recovery request created. Contact your trusted users to approve it.",
+  "recovery.requestSubmitted": "If this account exists and has trusted users configured, a recovery request has been created.",
+  "recovery.initiateFailed": "Failed to initiate recovery",
+  "recovery.pendingTitle": "Recovery Pending",
+  "recovery.pendingDescription": "Your recovery request is awaiting approval from your trusted users. Contact them to approve your request.",
+  "recovery.approvals": "Approvals",
+  "recovery.expiresAt": "Expires at",
+  "recovery.checkStatus": "Check Status",
+  "recovery.approved": "Your recovery request has been approved! You can now set a new password.",
+  "recovery.rejected": "Your recovery request was rejected.",
+  "recovery.expired": "Your recovery request has expired. Please try again.",
+  "recovery.setNewPasswordTitle": "Set New Password",
+  "recovery.resetButton": "Reset Password",
+  "recovery.resetFailed": "Failed to reset password",
+  "recovery.passwordReset": "Your password has been reset successfully!",
+  "recovery.successTitle": "Password Reset Complete",
+  "recovery.successDescription": "Your password has been reset. You can now log in with your new password.",
+  "recovery.backToLogin": "Back to Login",
+  "recovery.pendingRecoveries": "Pending Recovery Requests",
+  "recovery.noPendingRecoveries": "No pending recovery requests.",
+  "recovery.userRequestsRecovery": "{username} is requesting password recovery",
+  "recovery.voteApprove": "Approve",
+  "recovery.voteReject": "Reject",
+  "recovery.alreadyVoted": "You have already voted",
+  "recovery.yourVote": "Your vote",
+  "recovery.votedApprove": "Approved",
+  "recovery.votedReject": "Rejected",
+  "recovery.blockedByRejection": "Blocked - a trusted user has rejected this request",
+  "recovery.blockedByYou": "Blocked - you have rejected this request",
+  "recovery.changeToApprove": "Change to Approve",
+  "recovery.changeToReject": "Change to Reject",
+
+  "errors.networkError": "Cannot connect to the server. Please check your internet connection or try again later."
 }
