--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -10,7 +10,7 @@
   "common.success": "Succès",
   "common.yes": "Oui",
   "common.no": "Non",
-  "common.back": "← Retour",
+  "common.back": "Retour",
   "common.created": "Créé",
   "common.clear": "Effacer",
   "common.unknown": "Inconnu",
@@ -566,6 +566,26 @@
   "projectSettings.handleSavePoolWarning.success": "Paramètres d'alerte de la cagnotte mis à jour",
   "projectSettings.handleSavePoolWarning.fail": "Échec de la mise à jour des paramètres d'alerte",
 
+  "approvals.title": "Approbations",
+  "approvals.my_pending": "Mes approbations en attente",
+  "approvals.no_pending_approvals": "Vous n'avez aucune approbation en attente.",
+  "approvals.can_vote_on": "Approbations nécessitant votre vote",
+  "approvals.no_actionable_approvals": "Il n'y a aucune approbation nécessitant votre vote.",
+  "approvals.approve": "Approuver",
+  "approvals.reject": "Rejeter",
+  "approvals.event.password_change": "Changement de mot de passe",
+  "approvals.event.password_reset": "Réinitialisation de mot de passe",
+  "approvals.voting_progress": "Progression du vote",
+  "approvals.solo_project": "Vous êtes le seul administrateur de ce projet, votre vote détermine donc le résultat.",
+  "approvals.votes": "Votes",
+  "approvals.no_votes_yet": "Aucun vote pour le moment",
+  "approvals.cast_vote": "Votez",
+  "approvals.reason": "Raison",
+  "approvals.reason_optional": "Raison (optionnelle)",
+  "approvals.reason_placeholder": "Pourquoi votez-vous ainsi ?",
+
+  "common.view_details": "Voir les détails",
+
   "weekdays.sun": "Dim",
   "weekdays.mon": "Lun",
   "weekdays.tue": "Mar",
@@ -626,5 +646,43 @@
   "help.passwordRecovery.important.point3": "Si vous n'avez pas d'utilisateurs de confiance, seul un administrateur système peut vous aider à récupérer votre compte",
 
   "help.passwordRecovery.contactAdmin.title": "Besoin d'aide ?",
-  "help.passwordRecovery.contactAdmin.description": "Si vous n'avez pas configuré d'utilisateurs de confiance ou s'ils ne sont pas disponibles, contactez la personne qui gère votre serveur BonsCompte pour obtenir de l'aide."
+  "help.passwordRecovery.contactAdmin.description": "Si vous n'avez pas configuré d'utilisateurs de confiance ou s'ils ne sont pas disponibles, contactez la personne qui gère votre serveur BonsCompte pour obtenir de l'aide.",
+
+  "recovery.title": "Récupération de mot de passe",
+  "recovery.description": "Entrez votre nom d'utilisateur pour initier une demande de récupération de mot de passe. Vos utilisateurs de confiance devront approuver la demande.",
+  "recovery.usernamePlaceholder": "Entrez votre nom d'utilisateur",
+  "recovery.initiateButton": "Demander la récupération",
+  "recovery.requestCreated": "Demande de récupération créée. Contactez vos utilisateurs de confiance pour l'approuver.",
+  "recovery.requestSubmitted": "Si ce compte existe et a des utilisateurs de confiance configurés, une demande de récupération a été créée.",
+  "recovery.initiateFailed": "Échec de l'initiation de la récupération",
+  "recovery.pendingTitle": "Récupération en attente",
+  "recovery.pendingDescription": "Votre demande de récupération attend l'approbation de vos utilisateurs de confiance. Contactez-les pour approuver votre demande.",
+  "recovery.approvals": "Approbations",
+  "recovery.expiresAt": "Expire à",
+  "recovery.checkStatus": "Vérifier le statut",
+  "recovery.approved": "Votre demande de récupération a été approuvée ! Vous pouvez maintenant définir un nouveau mot de passe.",
+  "recovery.rejected": "Votre demande de récupération a été rejetée.",
+  "recovery.expired": "Votre demande de récupération a expiré. Veuillez réessayer.",
+  "recovery.setNewPasswordTitle": "Définir un nouveau mot de passe",
+  "recovery.resetButton": "Réinitialiser le mot de passe",
+  "recovery.resetFailed": "Échec de la réinitialisation du mot de passe",
+  "recovery.passwordReset": "Votre mot de passe a été réinitialisé avec succès !",
+  "recovery.successTitle": "Mot de passe réinitialisé",
+  "recovery.successDescription": "Votre mot de passe a été réinitialisé. Vous pouvez maintenant vous connecter avec votre nouveau mot de passe.",
+  "recovery.backToLogin": "Retour à la connexion",
+  "recovery.pendingRecoveries": "Demandes de récupération en attente",
+  "recovery.noPendingRecoveries": "Aucune demande de récupération en attente.",
+  "recovery.userRequestsRecovery": "{username} demande la récupération de mot de passe",
+  "recovery.voteApprove": "Approuver",
+  "recovery.voteReject": "Rejeter",
+  "recovery.alreadyVoted": "Vous avez déjà voté",
+  "recovery.yourVote": "Votre vote",
+  "recovery.votedApprove": "Approuvé",
+  "recovery.votedReject": "Rejeté",
+  "recovery.blockedByRejection": "Bloqué - un utilisateur de confiance a rejeté cette demande",
+  "recovery.blockedByYou": "Bloqué - vous avez rejeté cette demande",
+  "recovery.changeToApprove": "Changer en Approuver",
+  "recovery.changeToReject": "Changer en Rejeter",
+
+  "errors.networkError": "Impossible de se connecter au serveur. Veuillez vérifier votre connexion internet ou réessayer plus tard."
 }
