Added a standardized backend error to be able to translate them at the frontend level

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -684,5 +684,80 @@
   "recovery.changeToApprove": "Change to Approve",
   "recovery.changeToReject": "Change to Reject",
 
-  "errors.networkError": "Cannot connect to the server. Please check your internet connection or try again later."
+  "errors.networkError": "Cannot connect to the server. Please check your internet connection or try again later.",
+  "errors.unknown": "An unexpected error occurred. Please try again.",
+
+  "errors.unauthorized": "Authentication required. Please log in.",
+  "errors.invalidCredentials": "Invalid username or password.",
+  "errors.accountPending": "Your account is pending approval.",
+  "errors.accountRevoked": "Your account has been revoked.",
+  "errors.tokenExpired": "Your session has expired. Please log in again.",
+  "errors.tokenInvalidated": "Your session has been invalidated. Please log in again.",
+  "errors.invalidToken": "Invalid session. Please log in again.",
+  "errors.usernameExists": "This username is already taken.",
+  "errors.passwordTooWeak": "Password must be at least 6 characters.",
+  "errors.usernameRequired": "Username is required.",
+
+  "errors.invalidInput": "Invalid input. Please check your data and try again.",
+  "errors.amountMustBePositive": "Amount must be greater than zero.",
+  "errors.contributionRequired": "At least one contribution is required.",
+  "errors.totalWeightMustBePositive": "Total weight must be greater than zero.",
+  "errors.invalidPayer": "Invalid payer selected.",
+  "errors.invalidReceiver": "Invalid receiver selected.",
+  "errors.invalidParticipant": "Invalid participant.",
+  "errors.invalidRole": "Invalid role.",
+  "errors.invalidDateFormat": "Invalid date format.",
+  "errors.invalidDecimalSeparator": "Invalid decimal separator.",
+  "errors.invalidCurrencyPosition": "Invalid currency position.",
+  "errors.invalidAccountType": "Account type must be 'user' or 'pool'.",
+  "errors.invalidVote": "Vote must be 'approve' or 'reject'.",
+  "errors.invalidWarningHorizon": "Invalid warning horizon value.",
+  "errors.passwordMismatch": "Passwords do not match.",
+  "errors.noFieldsToUpdate": "No fields to update.",
+
+  "errors.notFound": "The requested resource was not found.",
+  "errors.userNotFound": "User not found.",
+  "errors.projectNotFound": "Project not found.",
+  "errors.participantNotFound": "Participant not found.",
+  "errors.paymentNotFound": "Payment not found.",
+  "errors.memberNotFound": "Member not found.",
+  "errors.inviteNotFound": "Invite not found.",
+  "errors.recoveryNotFound": "Recovery request not found.",
+  "errors.approvalNotFound": "Approval request not found.",
+
+  "errors.forbidden": "You do not have permission to perform this action.",
+  "errors.adminRequired": "Admin access required.",
+  "errors.editorRequired": "Editor access required.",
+  "errors.notTrustedUser": "You are not a trusted user for this account.",
+  "errors.cannotModifySelf": "You cannot modify your own account this way.",
+  "errors.cannotRemoveSelf": "You cannot remove yourself.",
+
+  "errors.invitesDisabled": "Invites are disabled for this project.",
+  "errors.alreadyMember": "You are already a member of this project.",
+  "errors.inviteAlreadyUsed": "This invite has already been used.",
+  "errors.participantAlreadyClaimed": "This participant has already been claimed.",
+  "errors.participantAlreadyLinked": "This participant is already linked to a user.",
+  "errors.alreadyHasParticipant": "You already have a participant in this project.",
+  "errors.linkedUserCannotBePool": "A linked user cannot become a pool account.",
+  "errors.poolWarningOnlyForPools": "Warning settings can only be configured for pool accounts.",
+  "errors.projectLimitReached": "You have reached the maximum number of projects.",
+  "errors.memberAlreadyActive": "This member is already active.",
+  "errors.cannotApproveMember": "Cannot approve this member.",
+  "errors.cannotRejectMember": "Cannot reject this member.",
+  "errors.cannotRejectActiveMember": "Cannot reject an active member.",
+  "errors.recoveryExpired": "This recovery request has expired.",
+  "errors.recoveryNotPending": "This recovery request is no longer pending.",
+  "errors.recoveryNotApproved": "This recovery request has not been approved yet.",
+  "errors.recoveryInsufficientTrustedUsers": "If this account exists and has trusted users configured, a recovery request has been created.",
+  "errors.cannotTrustSelf": "You cannot add yourself as a trusted user.",
+  "errors.alreadyTrustedUser": "This user is already in your trusted users list.",
+  "errors.cannotDeleteAccountNoAdmin": "Cannot delete account: the project has other members but no other admins. Please promote another member to admin first.",
+
+  "errors.invalidBase64Image": "Invalid image data.",
+  "errors.imageTooLarge": "Image is too large. Maximum size is 5MB.",
+  "errors.imageEmpty": "Image is empty.",
+  "errors.invalidImageFormat": "Invalid image format. Only JPEG, PNG, GIF, and WebP are supported.",
+
+  "errors.internalError": "An internal error occurred. Please try again later.",
+  "errors.databaseError": "A database error occurred. Please try again later."
 }
