--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -684,5 +684,80 @@
   "recovery.changeToApprove": "Changer en Approuver",
   "recovery.changeToReject": "Changer en Rejeter",
 
-  "errors.networkError": "Impossible de se connecter au serveur. Veuillez vérifier votre connexion internet ou réessayer plus tard."
+  "errors.networkError": "Impossible de se connecter au serveur. Veuillez vérifier votre connexion internet ou réessayer plus tard.",
+  "errors.unknown": "Une erreur inattendue s'est produite. Veuillez réessayer.",
+
+  "errors.unauthorized": "Authentification requise. Veuillez vous connecter.",
+  "errors.invalidCredentials": "Nom d'utilisateur ou mot de passe invalide.",
+  "errors.accountPending": "Votre compte est en attente d'approbation.",
+  "errors.accountRevoked": "Votre compte a été révoqué.",
+  "errors.tokenExpired": "Votre session a expiré. Veuillez vous reconnecter.",
+  "errors.tokenInvalidated": "Votre session a été invalidée. Veuillez vous reconnecter.",
+  "errors.invalidToken": "Session invalide. Veuillez vous reconnecter.",
+  "errors.usernameExists": "Ce nom d'utilisateur est déjà pris.",
+  "errors.passwordTooWeak": "Le mot de passe doit contenir au moins 6 caractères.",
+  "errors.usernameRequired": "Le nom d'utilisateur est requis.",
+
+  "errors.invalidInput": "Entrée invalide. Veuillez vérifier vos données et réessayer.",
+  "errors.amountMustBePositive": "Le montant doit être supérieur à zéro.",
+  "errors.contributionRequired": "Au moins une contribution est requise.",
+  "errors.totalWeightMustBePositive": "Le poids total doit être supérieur à zéro.",
+  "errors.invalidPayer": "Payeur sélectionné invalide.",
+  "errors.invalidReceiver": "Destinataire sélectionné invalide.",
+  "errors.invalidParticipant": "Participant invalide.",
+  "errors.invalidRole": "Rôle invalide.",
+  "errors.invalidDateFormat": "Format de date invalide.",
+  "errors.invalidDecimalSeparator": "Séparateur décimal invalide.",
+  "errors.invalidCurrencyPosition": "Position du symbole monétaire invalide.",
+  "errors.invalidAccountType": "Le type de compte doit être 'utilisateur' ou 'cagnotte'.",
+  "errors.invalidVote": "Le vote doit être 'approuver' ou 'rejeter'.",
+  "errors.invalidWarningHorizon": "Valeur d'horizon d'alerte invalide.",
+  "errors.passwordMismatch": "Les mots de passe ne correspondent pas.",
+  "errors.noFieldsToUpdate": "Aucun champ à mettre à jour.",
+
+  "errors.notFound": "La ressource demandée n'a pas été trouvée.",
+  "errors.userNotFound": "Utilisateur non trouvé.",
+  "errors.projectNotFound": "Projet non trouvé.",
+  "errors.participantNotFound": "Participant non trouvé.",
+  "errors.paymentNotFound": "Paiement non trouvé.",
+  "errors.memberNotFound": "Membre non trouvé.",
+  "errors.inviteNotFound": "Invitation non trouvée.",
+  "errors.recoveryNotFound": "Demande de récupération non trouvée.",
+  "errors.approvalNotFound": "Demande d'approbation non trouvée.",
+
+  "errors.forbidden": "Vous n'avez pas la permission d'effectuer cette action.",
+  "errors.adminRequired": "Accès administrateur requis.",
+  "errors.editorRequired": "Accès éditeur requis.",
+  "errors.notTrustedUser": "Vous n'êtes pas un utilisateur de confiance pour ce compte.",
+  "errors.cannotModifySelf": "Vous ne pouvez pas modifier votre propre compte de cette manière.",
+  "errors.cannotRemoveSelf": "Vous ne pouvez pas vous retirer vous-même.",
+
+  "errors.invitesDisabled": "Les invitations sont désactivées pour ce projet.",
+  "errors.alreadyMember": "Vous êtes déjà membre de ce projet.",
+  "errors.inviteAlreadyUsed": "Cette invitation a déjà été utilisée.",
+  "errors.participantAlreadyClaimed": "Ce participant a déjà été revendiqué.",
+  "errors.participantAlreadyLinked": "Ce participant est déjà lié à un utilisateur.",
+  "errors.alreadyHasParticipant": "Vous avez déjà un participant dans ce projet.",
+  "errors.linkedUserCannotBePool": "Un utilisateur lié ne peut pas devenir un compte cagnotte.",
+  "errors.poolWarningOnlyForPools": "Les paramètres d'alerte ne peuvent être configurés que pour les comptes cagnotte.",
+  "errors.projectLimitReached": "Vous avez atteint le nombre maximum de projets.",
+  "errors.memberAlreadyActive": "Ce membre est déjà actif.",
+  "errors.cannotApproveMember": "Impossible d'approuver ce membre.",
+  "errors.cannotRejectMember": "Impossible de rejeter ce membre.",
+  "errors.cannotRejectActiveMember": "Impossible de rejeter un membre actif.",
+  "errors.recoveryExpired": "Cette demande de récupération a expiré.",
+  "errors.recoveryNotPending": "Cette demande de récupération n'est plus en attente.",
+  "errors.recoveryNotApproved": "Cette demande de récupération n'a pas encore été approuvée.",
+  "errors.recoveryInsufficientTrustedUsers": "Si ce compte existe et a des utilisateurs de confiance configurés, une demande de récupération a été créée.",
+  "errors.cannotTrustSelf": "Vous ne pouvez pas vous ajouter comme utilisateur de confiance.",
+  "errors.alreadyTrustedUser": "Cet utilisateur est déjà dans votre liste d'utilisateurs de confiance.",
+  "errors.cannotDeleteAccountNoAdmin": "Impossible de supprimer le compte : le projet a d'autres membres mais aucun autre administrateur. Veuillez d'abord promouvoir un autre membre comme administrateur.",
+
+  "errors.invalidBase64Image": "Données d'image invalides.",
+  "errors.imageTooLarge": "L'image est trop grande. La taille maximum est de 5 Mo.",
+  "errors.imageEmpty": "L'image est vide.",
+  "errors.invalidImageFormat": "Format d'image invalide. Seuls JPEG, PNG, GIF et WebP sont pris en charge.",
+
+  "errors.internalError": "Une erreur interne s'est produite. Veuillez réessayer plus tard.",
+  "errors.databaseError": "Une erreur de base de données s'est produite. Veuillez réessayer plus tard."
 }
